--- a/dst/treatment/index.html
+++ b/dst/treatment/index.html
@@ -77,13 +77,22 @@
         </div>
         <div class="row middle-xs center-xs">
             <div class="col-xs-12">
-        		<nav class="nav-bar">
+        		<nav class="nav-bar" hidden>
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="/about">About</a></li>
-                        <li><a href="/treatment">Treatment</a></li>
                         <li>
-                            <a>Addictions</a>
+                            <!-- <a href="/treatment">Treatment</a></li> -->
+                            <a>Treatment</a>
+                            <ul>
+                                <li><a href="/treatment/therapy">Therapy</a></li>
+                                <li><a href="/treatment/php">Day Treatment</a></li>
+                                <li><a href="/treatment/iop">Intensive Outpatient</a></li>
+                                <li><a href="/treatment/modalities">Theraputic Modalities</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a>Addiction</a>
                             <ul>
                                 <li><a href="/addiction/alcohol/">Alcohol</a></li>
                                 <li><a href="/addiction/heroin/">Heroin</a></li>
@@ -135,85 +144,44 @@
             <p>At Flatirons Recovery, clients can expect compassionate, evidence-based treatment for addiction and any co-occurring mental health disorders. Our treatment team focuses on healing the whole individual, instead of focusing on one specific area of a person’s life that may be problematic, in order to provide clients with more opportunity to maintain long-term sobriety. </p>
             <p>We do this by working collaboratively with clients to develop an action plan for relapse prevention, heal trauma, learn skills to more successfully cope with mental health challenges, eat healthier, get more consistent exercise, have fun in recovery, and stay connected to a supportive sober community.</p>
 
-            <h3>Day Treatment (PHP)</h3>
-            <p>Addiction treatment at Flatirons Recovery typically begins in our Day Treatment, or PHP program, which meets Monday through Friday, from 8:30am – 3:00pm. During the week, clients participate in a structured, comprehensive group therapy curriculum that includes, but is not limited to:</p>
-            <ul>
-                <li>Foundations for Recovery</li>
-                <li>CBT/DBT skills for relapse prevention</li>
-                <li>Education on the neurobiology of addiction</li>
-                <li>Developing mindfulness skills</li>
-                <li>Nutrition for early recovery</li>
-                <li>Relationships</li>
-                <li>Community-based recovery models such as Smart Recovery and AA/12-Step.</li>
-                <li>Experiential programing including art therapy, equine therapy, hiking, and rock climbing.</li>
-            </ul>
-            <p>Clients may participate in Day Treatment while living at home, though it is recommended that clients live in our staffed sober living house for the full duration of their Day Treatment program. For more information about Flatirons Recovery Center’s sober living, please <a href="/sober-living">click here</a>.</p>
-            <p>During Day Treatment, clients will also meet with a therapist for 1-hour of individual therapy per week, participate in family therapy on an as needed basis, as well as meet regularly with our Medical Director for any medication and/or physical health needs. Individual therapy may include biofeedback, art therapy, and trauma therapy such as EMDR, when indicated.</p>
-            <p>Day Treatment at Flatirons Recovery lasts anywhere from 4 to 12 weeks to meet the individual treatment needs of different clients.</p>
-            <p>Often, clients transition from Day Treatment to our IOP for 4-12 weeks in order to continue receiving recovery support, structure, and accountability, while re-engaging in work and/or independent living.</p>
+        </div>
+    </div>
+    <div class="row center-xs">
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="blue tile">
+                <h3>Therapy</h3>
+                <p>At Flatirons Recovery Center, clients will engage in a weekly, 1-hour individual therapy session in order
+                    to develop more insight into the habitual patterns that have influenced their substance use disorder.
+                </p>
+                <a href="/treatment/therapy" class="button border">Learn More</a>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="blue tile">
+                <h3>Day Treatment</h3>
+                <p>Addiction treatment at Flatirons Recovery typically begins in our Day Treatment, or PHP program, which
+                    meets Monday through Friday, from 8:30am – 3:00pm.</p>
+                <a href="/treatment/php" class="button border">Learn More</a>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="blue tile">
+                <h3>Intensive Outpatient</h3>
+                <p>At Flatirons Recovery Center, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am -
+                    12pm for group therapy.</p>
+                <a href="/treatment/iop" class="button border">Learn More</a>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="blue tile">
+                <h3>Theraputic Modalities</h3>
+                <p>Cognitive Behavioral Therapy, Biofeedback, Dialectical Behavioral Therapy are just some of the theraputic modalities utilized by Flatirons Recovery.</p>
+                <a href="/treatment/therapy" class="button border">Learn More</a>
+            </div>
+        </div>
+    </div>
 
-            <h3>Intensive Outpatient (IOP)</h3>
-            <p>At Flatirons Recovery Center, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy.</p>
-            <p>Group topics addressed in IOP include, but are not limited to:</p>
-            <ul>
-                <li>CBT/DBT skills for relapse prevention</li>
-                <li>Developing mindfulness skills</li>
-                <li>Relationships</li>
-                <li>Role of family in recovery</li>
-                <li>Community-based recovery models such as Smart Recovery and AA/12-Step</li>
-            </ul>
-            <p>Flatirons Recovery’s IOP also includes 1-hour of weekly individual psychotherapy.</p>
-            <p>Our IOP program lasts anywhere from 4 to 12 weeks to meet the individual treatment needs of different clients.</p>
-            <p>Clients participating in Flatiron Recovery Center’s IOP program typically live independently at home, or in a nearby sober living facility.</p>
-
-            <h2>Therapy</h2>
-            <h3>individual</h3>
-            <p>At Flatirons Recovery Center, clients will engage in a weekly, 1-hour individual therapy session in order to develop more insight into the habitual patterns that have influenced their substance use disorder, as well as to develop more ability to take appropriate action to begin the healing process. </p>
-            <p>Topics that may be addressed during individual sessions at Flatirons Recovery include:</p>
-            <ul>
-                <div class="row">
-                    <div class="col-xs-12 col-sm">
-                        <li>Healing trauma (EMDR)</li>
-                        <li>Habitual thought and behavioral patterns</li>
-                        <li>Healing and shifting outdated core beliefs</li>
-                        <li>Family systems dynamics</li>
-                        <li>Recovery aspirations and goals</li>
-                    </div>
-                    <div class="col-xs-12 col-sm">
-                        <li>Self-esteem, identity, and confidence</li>
-                        <li>Direct communication</li>
-                        <li>Relationships</li>
-                        <li>Developing healthy boundaries</li>
-                    </div>
-                </div>
-            </ul>
-        </div>
-        <div class="col-xs-12">
-            <h3>Family Therapy</h3>
-            <p>At Flatirons Recovery Center, clients may engage in a bi-weekly, 1-hour family sessions, in order to develop more insight into the systemic ways in which substance use disorders may be impacting their family life.</p>
-            <p>These sessions will be coordinated by therapists, and typically take place beginning two weeks into client’s treatment programs.</p>
-        </div>
-        <div class="col-xs-12">
-            <h3>Group Therapy</h3>
-            <p>At Flatirons Recovery Center, clients will engage in 30-hours of group programming during PHP/Day Treatment programming, and 9-15 hours of group programming during Intensive Outpatient programming.</p>
-            <p>Topics that may be addressed during group therapy sessions at Flatirons Recovery include:</p>
-            <ul>
-                <div class="row">
-                    <div class="col-xs-12 col-sm">
-                        <li>Relapse Prevention</li>
-                        <li>Neurobiology of addiction</li>
-                        <li>Relationships in recovery</li>
-                        <li>Community-based recovery (AA/SMART Recovery)</li>
-                    </div>
-                    <div class="col-xs-12 col-sm">
-                        <li>Mindfulness</li>
-                        <li>Nutrition for early recovery (Pro-Recovery Diet)</li>
-                        <li>Having fun in recovery</li>
-                        <li>Grief and loss</li>
-                    </div>
-                </div>
-            </ul>
-        </div>
+    <div class="row">
         <div class="col-xs-12">
             <h3>Support Groups for Family Members</h3>
             <p>Flatirons Recovery Center highly recommends that family members support themselves while their loved one is in treatment. The following in a small sampling of the community supports that may be appropriate and/or available in your community.</p>
@@ -229,7 +197,7 @@
     </div>
 </div>
 
-<div class="blue">
+<div class="muted">
     
 <div class="wrap">
     <div class="row center-xs">
@@ -244,35 +212,6 @@
     </div>
 </div>
 
-</div>
-<div class="wrap">
-    <div class="row">
-        <div class="col-xs">
-            <h2>Therapeutic Modalities Utilized by Flatirons Recovery</h2>
-
-            <h3>Cognitive Behavioral Therapy (CBT)</h3>
-            <p>CBT (Cognitive-Behavioral Therapy) is the most readily recognizable form of psychotherapy, and the kind that most people probably think about when they imagine “going to therapy.” It addresses people’s thought patterns, feelings, and subsequent behaviors, offering new perspectives on people’s experiences and training them to confront problems in a healthy way. CBT is an umbrella term; there are a vast array of “sub-categories” of CBT, all of which are designed to address the problems that can arise when thoughts, feelings, and behaviors become inextricably linked. Some of these modalities of CBT include ACT and DBT.</p>
-
-            <h3>Acceptance and Commitment Therapy (ACT)</h3>
-            <p>ACT is based on the premise that distressing thoughts and feelings can be successfully managed by developing the ability to observe them with an attitude of non-judgment and acceptance. While it may seem counterintuitive, leaning into negative thoughts can often have the effect of making those thoughts less painful or “sticky.” ACT dictates that when people are no longer trapped in the the quicksand of their negative thought patterns, they are freer to identify the people, places, and ideas that are valuable to them. Those values can then act as a life compass, providing guidance and direction when the going gets tough.</p>
-
-            <h3>Dialectical Behavioral Therapy (DBT)</h3>
-            <p>The theory behind DBT is that some people react in a more intense manner toward certain emotional situations, primarily those found in their close relationships. This heightened emotional reactivity causes people to see the world in black-and-white terms and can lead to recurring episodes of crisis or self-destructive behavior, which can significantly impact their day-to-day functioning. Learning DBT skills - which focus on mindfulness, healthy communication, emotion regulation, and distress tolerance - can reduce the intensity and impact of difficult emotions, such as anger, hurt, betrayal, jealousy, and hopelessness. DBT has also been shown to alleviate recurring thoughts of suicide or self-harm.</p>
-
-            <h3>Experiential Therapy</h3>
-            <p>Experiential Therapy is also an umbrella term used to describe various therapies that allow people to heal in the context of an activity or experience, rather than relying on traditional means of verbal communication. In general, the emphasis in these therapies is placed on the process of engaging in the activity, rather than any particular product that may be created during the course of the sessions. Under the guidance of a trained experiential therapist, people can begin to release and explore negative feelings, such as anger, hurt, or shame; develop self-confidence and feel increased self-esteem; cultivate curiosity and enthusiasm; challenge fears; and discover new forms of self-expression. Examples of experiential therapies include: expressive arts, music, wilderness, psychodrama, and equine therapies.</p>
-
-            <h3>Eye Movement Desensitization and Reprocessing (EMDR)</h3>
-            <p>EMDR (Eye Movement Desensitization and Reprocessing) is a highly effective treatment for clients who have experienced trauma. While it was long believed that trauma could take years to work through, EMDR has shown to significantly reduce intrusive symptoms in as few as three sessions. In such a session, a person would be asked to recall distressing images; the therapist would then direct the person in some type of bilateral stimulation, such as rapid, side-to-side eye movements. While there are several theories positing the specific mechanisms for its effectiveness, EMDR can provide rapid relief for people suffering from PTSD, depression, anxiety, and other debilitating conditions.</p>
-
-            <h3>Motivational Interviewing (MI)</h3>
-            <p>Motivational interviewing is a counseling method that helps people resolve ambivalent feelings and insecurities to find the internal motivation they need to change their behavior. It is a practical, empathetic, and short-term process that takes into consideration how difficult can be to form new habits and create lasting change in one’s life. Research has shown that MI works particularly well with people who initially feel unmotivated or unprepared for change.</p>
-
-            <h3>Biofeedback</h3>
-            <p>Biofeedback is a safe, non-invasive technology used to treat people with a variety of physical and mental health conditions (including anxiety, chronic pain, ADHD, performance anxiety, among others). Sensors that measure various biometrics - such as heart rate, respirations, and sweat gland activity - are employed in conjunction with software that provides visual representation of a person’s physiological state. This not only allows people to “see” what’s happening in their bodies when they feel distressed, but also train themselves to consciously change their experience. Biofeedback generally requires a relatively brief period of training, making it an especially useful tool in shorter-term treatment settings.</p>
-
-        </div>
-    </div>
 </div>
 
     </main>
