--- a/dst/treatment/iop/index.html
+++ b/dst/treatment/iop/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About Our Addiction Treatment Center | Flatirons Recovery</title>
+    <title>Intensive Outpatient (IOP) | Flatirons Recovery</title>
 
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Our addiction treatment program provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30, 60, and 90-day tracks. Learn more about us!">
-    <meta name="keywords" content="addiction treatment, substance use, mental health disorder">
+    <meta name="description" content="At Flatirons Recovery Center, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy. Learn about our treatment program.">
+    <meta name="keywords" content="intensive outpatient, iop program, treatment program">
 
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Flatirons Recovery Centers">
-	<meta property="og:title" content="About Our Addiction Treatment Center | Flatirons Recovery">
-	<meta property="og:description" content="Our addiction treatment program provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30, 60, and 90-day tracks. Learn more about us!">
-	<meta property="og:image" content="/about/wooden-fence.jpg" />
+	<meta property="og:title" content="Intensive Outpatient (IOP) | Flatirons Recovery">
+	<meta property="og:description" content="At Flatirons Recovery Center, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy. Learn about our treatment program.">
+	<meta property="og:image" content="/treatment/blue-brook.jpg" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
@@ -125,43 +125,39 @@
 
 <style>
     .main {
-        background-image: url('/about/wooden-fence.jpg');
-    }
-    .rti {
-        max-width: 300px;
-        min-width: 100px;
+        background-image: url('/treatment/blue-brook.jpg');
     }
 </style>
 
 <div class="main">
     <div class="gradient">
         <div>
-            <h1>ABOUT</h1>
-            <h3>learn more about our addiction treatment center</h3>
+            <h1>Intensive Outpatient (IOP)</h1>
+            <h3>treatment and therapy at our addiction treatment center</h3>
         </div>
     </div>
-</div>
-
-<div class="wrap">
-    <h2>Our Mission</h2>
-    <p>The mission of Flatirons Recovery is to walk alongside our clients through the process of healing from addiction with greater clarity of purpose, connection to community, and ability to take right action in their lives. </p>
-    <p>What differentiates Flatirons Recovery Center from other treatment providers is our mindfulness-influenced curriculum, commitment to small group sizes, and belief that all our clients are innately good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and mental health disorders.</p>
-    <p>Flatirons Recovery Center provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. We provide a sober living residence for clients to live in a supportive, structured, healthy environment while taking part in our Day Treatment, and Intensive Outpatient (IOP) programs. Over the course of their time with Flatirons Recovery Center, clients can expect to be introduced to new many new skills to develop their personal foundation for recovery, including: Mindfulness Skills, Pro-Recovery Diet, biofeedback, EMDR trauma therapy, Dialectical Behavioral Therapy, Relapse Prevention Skills, and introduction to community based recovery programs such as SMART Recovery and 12 Step/AA.</p>
 </div>
 
 <div class="wrap">
     <div class="row">
-        <div class="col-xs-12 col-md-4">
-            <img class="rti" src="/about/rti-logo.png" alt="Residential Transitions Inc">
-        </div>
-        <div class="col-xs-12 col-md-8">
-            <h3>Residential Transitions, Inc.</h3>
-            <p>Flatirons Recovery is a sister company of <a href="https://www.rti-mn.com/" target="_blank">Residential Transitions, Inc. (RTI)</a>. Founded in May 2013, RTI is committed to providing support services for people with disabilities to help them achieve the highest level of independence. RTI’s method is to teach, model and support skill building services which promote goal-oriented outcomes. RTI believes that if we are doing our job, the need for our services will be lessened as each individual, with the assistance of our practitioners, becomes more and more independent.</p>
+        <div class="col-xs">
+            <p>At Flatirons Recovery Center, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy.</p>
+            <p>Group topics addressed in IOP include, but are not limited to:</p>
+            <ul>
+                <li>CBT/DBT skills for relapse prevention</li>
+                <li>Developing mindfulness skills</li>
+                <li>Relationships</li>
+                <li>Role of family in recovery</li>
+                <li>Community-based recovery models such as Smart Recovery and AA/12-Step</li>
+            </ul>
+            <p>Flatirons Recovery’s IOP also includes 1-hour of weekly individual psychotherapy.</p>
+            <p>Our IOP program lasts anywhere from 4 to 12 weeks to meet the individual treatment needs of different clients.</p>
+            <p>Clients participating in Flatiron Recovery Center’s IOP program typically live independently at home, or in a nearby sober living facility.</p>
         </div>
     </div>
 </div>
 
-<div class="muted">
+<div class="blue">
     
 <div class="wrap">
     <div class="row center-xs">
@@ -177,7 +173,6 @@
 </div>
 
 </div>
-
     </main>
 
     <footer>
