--- a/dst/treatment/modalities/index.html
+++ b/dst/treatment/modalities/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About Our Addiction Treatment Center | Flatirons Recovery</title>
+    <title>Therapeutic Modalities | Flatirons Recovery</title>
 
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Our addiction treatment program provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30, 60, and 90-day tracks. Learn more about us!">
-    <meta name="keywords" content="addiction treatment, substance use, mental health disorder">
+    <meta name="description" content="Cognitive Behavioral Therapy, Biofeedback, Dialectical Behavioral Therapy are just some of the theraputic modalities utilized by Flatirons Recovery. Learn more.">
+    <meta name="keywords" content="addiction treatment, therapy">
 
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Flatirons Recovery Centers">
-	<meta property="og:title" content="About Our Addiction Treatment Center | Flatirons Recovery">
-	<meta property="og:description" content="Our addiction treatment program provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30, 60, and 90-day tracks. Learn more about us!">
-	<meta property="og:image" content="/about/wooden-fence.jpg" />
+	<meta property="og:title" content="Therapeutic Modalities | Flatirons Recovery">
+	<meta property="og:description" content="Cognitive Behavioral Therapy, Biofeedback, Dialectical Behavioral Therapy are just some of the theraputic modalities utilized by Flatirons Recovery. Learn more.">
+	<meta property="og:image" content="/treatment/blue-brook.jpg" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
@@ -125,43 +125,50 @@
 
 <style>
     .main {
-        background-image: url('/about/wooden-fence.jpg');
-    }
-    .rti {
-        max-width: 300px;
-        min-width: 100px;
+        background-image: url('/treatment/blue-brook.jpg');
     }
 </style>
 
 <div class="main">
     <div class="gradient">
         <div>
-            <h1>ABOUT</h1>
-            <h3>learn more about our addiction treatment center</h3>
+            <h1>Therapeutic Modalities</h1>
+            <h3>treatment and therapy at our addiction treatment center</h3>
         </div>
     </div>
-</div>
-
-<div class="wrap">
-    <h2>Our Mission</h2>
-    <p>The mission of Flatirons Recovery is to walk alongside our clients through the process of healing from addiction with greater clarity of purpose, connection to community, and ability to take right action in their lives. </p>
-    <p>What differentiates Flatirons Recovery Center from other treatment providers is our mindfulness-influenced curriculum, commitment to small group sizes, and belief that all our clients are innately good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and mental health disorders.</p>
-    <p>Flatirons Recovery Center provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. We provide a sober living residence for clients to live in a supportive, structured, healthy environment while taking part in our Day Treatment, and Intensive Outpatient (IOP) programs. Over the course of their time with Flatirons Recovery Center, clients can expect to be introduced to new many new skills to develop their personal foundation for recovery, including: Mindfulness Skills, Pro-Recovery Diet, biofeedback, EMDR trauma therapy, Dialectical Behavioral Therapy, Relapse Prevention Skills, and introduction to community based recovery programs such as SMART Recovery and 12 Step/AA.</p>
 </div>
 
 <div class="wrap">
     <div class="row">
-        <div class="col-xs-12 col-md-4">
-            <img class="rti" src="/about/rti-logo.png" alt="Residential Transitions Inc">
-        </div>
-        <div class="col-xs-12 col-md-8">
-            <h3>Residential Transitions, Inc.</h3>
-            <p>Flatirons Recovery is a sister company of <a href="https://www.rti-mn.com/" target="_blank">Residential Transitions, Inc. (RTI)</a>. Founded in May 2013, RTI is committed to providing support services for people with disabilities to help them achieve the highest level of independence. RTI’s method is to teach, model and support skill building services which promote goal-oriented outcomes. RTI believes that if we are doing our job, the need for our services will be lessened as each individual, with the assistance of our practitioners, becomes more and more independent.</p>
+        <div class="col-xs">
+            <h2>Therapeutic Modalities Utilized by Flatirons Recovery</h2>
+
+            <h3>Cognitive Behavioral Therapy (CBT)</h3>
+            <p>CBT (Cognitive-Behavioral Therapy) is the most readily recognizable form of psychotherapy, and the kind that most people probably think about when they imagine “going to therapy.” It addresses people’s thought patterns, feelings, and subsequent behaviors, offering new perspectives on people’s experiences and training them to confront problems in a healthy way. CBT is an umbrella term; there are a vast array of “sub-categories” of CBT, all of which are designed to address the problems that can arise when thoughts, feelings, and behaviors become inextricably linked. Some of these modalities of CBT include ACT and DBT.</p>
+
+            <h3>Acceptance and Commitment Therapy (ACT)</h3>
+            <p>ACT is based on the premise that distressing thoughts and feelings can be successfully managed by developing the ability to observe them with an attitude of non-judgment and acceptance. While it may seem counterintuitive, leaning into negative thoughts can often have the effect of making those thoughts less painful or “sticky.” ACT dictates that when people are no longer trapped in the the quicksand of their negative thought patterns, they are freer to identify the people, places, and ideas that are valuable to them. Those values can then act as a life compass, providing guidance and direction when the going gets tough.</p>
+
+            <h3>Dialectical Behavioral Therapy (DBT)</h3>
+            <p>The theory behind DBT is that some people react in a more intense manner toward certain emotional situations, primarily those found in their close relationships. This heightened emotional reactivity causes people to see the world in black-and-white terms and can lead to recurring episodes of crisis or self-destructive behavior, which can significantly impact their day-to-day functioning. Learning DBT skills - which focus on mindfulness, healthy communication, emotion regulation, and distress tolerance - can reduce the intensity and impact of difficult emotions, such as anger, hurt, betrayal, jealousy, and hopelessness. DBT has also been shown to alleviate recurring thoughts of suicide or self-harm.</p>
+
+            <h3>Experiential Therapy</h3>
+            <p>Experiential Therapy is also an umbrella term used to describe various therapies that allow people to heal in the context of an activity or experience, rather than relying on traditional means of verbal communication. In general, the emphasis in these therapies is placed on the process of engaging in the activity, rather than any particular product that may be created during the course of the sessions. Under the guidance of a trained experiential therapist, people can begin to release and explore negative feelings, such as anger, hurt, or shame; develop self-confidence and feel increased self-esteem; cultivate curiosity and enthusiasm; challenge fears; and discover new forms of self-expression. Examples of experiential therapies include: expressive arts, music, wilderness, psychodrama, and equine therapies.</p>
+
+            <h3>Eye Movement Desensitization and Reprocessing (EMDR)</h3>
+            <p>EMDR (Eye Movement Desensitization and Reprocessing) is a highly effective treatment for clients who have experienced trauma. While it was long believed that trauma could take years to work through, EMDR has shown to significantly reduce intrusive symptoms in as few as three sessions. In such a session, a person would be asked to recall distressing images; the therapist would then direct the person in some type of bilateral stimulation, such as rapid, side-to-side eye movements. While there are several theories positing the specific mechanisms for its effectiveness, EMDR can provide rapid relief for people suffering from PTSD, depression, anxiety, and other debilitating conditions.</p>
+
+            <h3>Motivational Interviewing (MI)</h3>
+            <p>Motivational interviewing is a counseling method that helps people resolve ambivalent feelings and insecurities to find the internal motivation they need to change their behavior. It is a practical, empathetic, and short-term process that takes into consideration how difficult can be to form new habits and create lasting change in one’s life. Research has shown that MI works particularly well with people who initially feel unmotivated or unprepared for change.</p>
+
+            <h3>Biofeedback</h3>
+            <p>Biofeedback is a safe, non-invasive technology used to treat people with a variety of physical and mental health conditions (including anxiety, chronic pain, ADHD, performance anxiety, among others). Sensors that measure various biometrics - such as heart rate, respirations, and sweat gland activity - are employed in conjunction with software that provides visual representation of a person’s physiological state. This not only allows people to “see” what’s happening in their bodies when they feel distressed, but also train themselves to consciously change their experience. Biofeedback generally requires a relatively brief period of training, making it an especially useful tool in shorter-term treatment settings.</p>
+
         </div>
     </div>
 </div>
 
-<div class="muted">
+<div class="blue">
     
 <div class="wrap">
     <div class="row center-xs">
@@ -177,7 +184,6 @@
 </div>
 
 </div>
-
     </main>
 
     <footer>
