--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -92,7 +92,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a>Addictions</a>
+                            <a>Addiction</a>
                             <ul>
                                 <li><a href="/addiction/alcohol/">Alcohol</a></li>
                                 <li><a href="/addiction/heroin/">Heroin</a></li>
