made lighthouse improvments

--- a/dst/treatment/therapy/index.html
+++ b/dst/treatment/therapy/index.html
@@ -53,7 +53,7 @@
 
         <div class="banner" hidden>
             <button class="blue close">X</button>
-            <span>How Flatirons is handling COVID-19 <a href="/covid-19">Learn More</a>.</span>
+            <a href="/covid-19">Learn how Flatirons is handling COVID-19.</a>
         </div>
 
         <div class="row middle-xs">
@@ -274,7 +274,7 @@
 
     <a class="call" href="tel:303-578-4536" data-track="click: phone, click">Call</a>
 
-    <script src="//cdn.callrail.com/companies/637562366/f6d029256f703e62f7b0/12/swap.js"></script> 
+    <script src="https://cdn.callrail.com/companies/637562366/f6d029256f703e62f7b0/12/swap.js"></script> 
 
 </body>
 </html>
