--- a/src/index.v.html
+++ b/src/index.v.html
@@ -138,23 +138,23 @@
             <!-- { "partial": "/partials/message-us.p.html" } -->
         </div>
         <div class="col-xs-12 col-sm-6">
-            <label>first name</label>
+            <label for="firstName">first name</label>
             <input type="text" name="firstName" required>
         </div>
         <div class="col-xs-12 col-sm-6">
-            <label>last name</label>
+            <label for="lastName">last name</label>
             <input type="text" name="lastName" required>
         </div>
         <div class="col-xs-12 col-sm-4">
-            <label>email</label>
+            <label for="email">email</label>
             <input type="text" name="email">
         </div>
         <div class="col-xs-12 col-sm-4">
-            <label>phone</label>
+            <label for="phone">phone</label>
             <input type="text" name="phone" required>
         </div>
         <div class="col-xs-12 col-sm-4">
-            <label>how'd you hear about us</label>
+            <label for="referral">how'd you hear about us</label>
             <select name="referral">
                 <option value="none" selected disabled>none</option>
                 <option value="social media">social media</option>
@@ -166,7 +166,7 @@
             </select>
         </div>
         <div class="col-xs-12">
-            <label>message</label>
+            <label for="message">message</label>
             <textarea name="message" required></textarea>
         </div>
         <div class="col-xs-12">
