link fix, build

--- a/dst/treatment/index.html
+++ b/dst/treatment/index.html
@@ -176,7 +176,7 @@
             <div class="blue tile">
                 <h3>Theraputic Modalities</h3>
                 <p>Cognitive Behavioral Therapy, Biofeedback, Dialectical Behavioral Therapy are just some of the theraputic modalities utilized by Flatirons Recovery.</p>
-                <a href="/treatment/therapy" class="button border">Learn More</a>
+                <a href="/treatment/modalities" class="button border">Learn More</a>
             </div>
         </div>
     </div>
