--- a/src/facility/index.v.html
+++ b/src/facility/index.v.html
@@ -1,7 +1,7 @@
 <!-- {
-    "title": "Treatment Facility | Flatirons Recovery",
-    "description": "",
-    "keywords": "professional team, compassionate therapists, treatment professional",
+    "title": "Treatment Facility Tour | Flatirons Recovery",
+    "description": "See photos of our treatment facility and take a virtual tour.",
+    "keywords": "treatment facility",
     "ogImage": "/about/wooden-fence.jpg"
 } -->
 
