--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -111,7 +111,8 @@
                                 <li><a href="/faq">FAQ</a></li>
                                 <li><a href="/mindfulness">Mindfulness</a></li>
                                 <li><a href="/admission">Admission</a></li>
-                                <!-- <li><a href="/team">Team</a></li> -->
+                                <li><a href="/team">Team</a></li>
+                                <li><a href="/facility">Facility</a></li>
                                 <li><a href="/contact">Contact</a></li>
                             </ul>
                         </li>
