facility cover photo

--- a/src/facility/index.v.html
+++ b/src/facility/index.v.html
@@ -8,7 +8,7 @@
 <script src="/assets/gallery.min.js"></script>
 <style>
     .main {
-        background-image: url('/about/wooden-fence.jpg');
+        background-image: url('/facility/IMG_0309.jpg');
     }
     .gallery > .item {
         overflow: hidden;
